Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86407

Accelerators in QDockWidget titles are displayed incorrectly in some styles

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.6, 6.7, 6.8.0 FF
    • 5.14.2, 6.7.0 Beta1
    • Widgets: Styles
    • None
    • All
    • cc67b25579c1bb5ea9f5c1ca4c9b7997e66f19b9, e68c3f025 (dev), d100f591f (6.7)

    Description

      Description

      When using any of the styles cde, motif, Windows, or Fusion, accelerators in QDockWidget titles are displayed using an ampersand (e.g. "&Example").

      Examples

      You can see an example screenshot using tellico with the Fusion style in the attached screenshot and another in this bug report for KPhotoAlbum

      The displayed title is correct with styles Breeze, cleanlooks, gtk2, plastique, and Oxygen.

      Steps to reproduce:

      Start any application with a QDockWidget that uses shortcuts with one of the offending styles:

      QT_STYLE_OVERRIDE=Fusion tellico

      QT_STYLE_OVERRIDE=Windows kphotoalbum

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            svuorela Sune Vuorela
            jzarl Johannes Zarl-Zierl
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes