Don't show mnemonics in dockwidget titles

Dockwidget title accelerators doesn't work in dock widgets, so don't
show them.
This amends cc67b25579c1bb5ea9f5c1ca4c9b7997e66f19b9.

Fixes: QTBUG-86407
Pick-to: 6.6
Change-Id: I83fb2da1304d1e2b5eedfc127e5db3d322756d06
Reviewed-by: Sune Vuorela <sune@vuorela.dk>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit e68c3f025ecc7cf1fa86e5e773cee8d61a816f61)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>